# Beam-vs-Duct

./: Dockerfile  flatten.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
Rules/: checks.py
